# google_drive_forge

./: .gitignore  LICENSE  MANIFEST.in  README.md  SKILL.md  pyproject.toml  requirements.txt  server.py
docs/: agentic_integration.md  api_reference.md  index.md  quickstart.md  setup.md  tool_reference.md
google_drive_forge/: __init__.py  __main__.py  auth.py  client.py  executor.py  intelligent_client.py  tools.py
google_drive_mcp/: __init__.py  __main__.py  audit.py  executor.py  resources.py  skill_loader.py  tools.py
scripts/: batch_download.py  download_file.py  move_files.py  verify_structure.py
skills/auto_archive/: SKILL.md  script.py
