[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-drive-forge"
version = "0.2.0"
description = "Autonomous Google Drive MCP with Skill Forge Capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "tenacity",
    "PyYAML"
]

[project.scripts]
google-drive-forge = "google_drive_forge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["google_drive_forge"]
